<resources>
    <string name="app_name">admin</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="planning_poker">Planning poker</string>
    <string name="admin_app">Admin app</string>
    <string name="questions">Questions</string>
    <string name="newQuestion">New question</string>
    <string name="select_session">Select session</string>
    <string name="question_name">Question name:</string>
    <string name="timeoutTitle">Timeout:</string>
    <string name="add">Add</string>
    <string name="votes">Votes</string>
    <string name="activate">Activate:</string>
    <string name="session">Session id</string>
</resources>
